--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -28,9 +28,10 @@
     <div class="sidebar" id="sidebar">
         <ul class="sidebar-ul">
             <li class="sidebar-li" id="sidebarLi">
-                <a href="#">Kundeservice</a>
+                <a href="#">Hjelp</a>
                 <a href="">Om oss</a>
                 <a href="">Priser</a>
+                <a href="">Kontakt oss</a>
             </li>   
         </ul>
     </div>
@@ -53,9 +54,10 @@
     <div class="desktop-menu">
         <ul class="desktop-ul">
             <li class="desktop-li" id="desktopLi">
-                <a href="#">Kundeservice</a>
+                <a href="#">Hjelp</a>
                 <a href="">Om oss</a>
                 <a href="">Priser</a>
+                <a href="">Kontakt oss</a>
             </li>   
         </ul>
     </div>
