--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -50,7 +50,7 @@ html, body {
   top: -20px;
   font-size: 28px;
   color: whitesmoke;
-  font-family: 'Satisfy', cursive;
+  font-family: 'Satisfy';
   font-weight: bold;
   -webkit-transition: all 3s ease;
   transition: all 3s ease;
