--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -40,7 +40,7 @@ html, body {
       top: -20px;
       font-size: 28px;
       color: rgb(245, 245, 245);
-      font-family: 'Satisfy', cursive;
+      font-family: 'Satisfy';
       font-weight: bold; 
       transition: all 3s ease;  
     }
