--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -150,10 +150,11 @@
   pointer-events: none;
   z-index: 10;
   background: white;
-  width: 100%;
-  height: 0;
+  width: 65%;
+  height: 700px;
   position: absolute;
   top: 50px;
+  right: -65%;
   -webkit-transition: all .7s ease-in-out;
   transition: all .7s ease-in-out;
 }
@@ -169,10 +170,12 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li a {
+  border-radius: 30px;
+  border: 2px solid black;
   color: #1e1e1e;
   display: inline-block;
   text-decoration: none;
-  width: 100%;
+  width: 60%;
   font-size: 18px;
   margin: 45px;
   margin-left: 0;
@@ -181,6 +184,11 @@
   opacity: 0;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li :nth-child(4) {
+  background: black;
+  color: white;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(1) {
@@ -201,10 +209,15 @@
   transition: all 1s ease-in-out 0.6s;
 }
 
+#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(4) {
+  opacity: 1;
+  -webkit-transition: all 1s ease-in-out 0.8s;
+  transition: all 1s ease-in-out 0.8s;
+}
+
 #navbar .sidebar.active {
   pointer-events: visible;
-  width: 100%;
-  height: 400px;
+  right: 0;
 }
 
 #navbar .my-account {
