--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -132,10 +132,11 @@ $primaryColor: #2d9cb3;
         pointer-events: none;
         z-index: 10;
         background: rgb(255, 255, 255);
-        width: 100%;
-        height: 0;
+        width: 65%;
+        height: 700px;
         position: absolute;
         top: 50px;
+        right: -65%;
         transition:  all .7s ease-in-out;
         .sidebar-ul{
             position: relative;
@@ -144,10 +145,12 @@ $primaryColor: #2d9cb3;
             .sidebar-li{
                 list-style: none;
                 a{
+                    border-radius: 30px;
+                    border: 2px solid black;
                     color: rgb(30, 30, 30);
                     display: inline-block;
                     text-decoration: none;
-                    width: 100%;
+                    width: 60%;
                     font-size: 18px;
                     margin: 45px;
                     margin-left: 0;
@@ -155,6 +158,10 @@ $primaryColor: #2d9cb3;
                     padding: 5px;
                     opacity: 0;
                     transition: all .5s ease-in-out;
+                }
+                :nth-child(4){
+                    background: black;
+                    color: white;
                 }
                 &.active{
                     :nth-child(1){
@@ -169,13 +176,16 @@ $primaryColor: #2d9cb3;
                         opacity: 1;
                         transition: all 1s ease-in-out 0.6s;
                     }
+                    :nth-child(4){
+                        opacity: 1;
+                        transition: all 1s ease-in-out 0.8s;
+                    }
                 }
             }
         }
         &.active{
             pointer-events: visible;
-            width: 100%;
-            height: 400px;
+            right: 0;
         }
     }
     .my-account{
