--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -84,13 +84,19 @@ html, body {
 }
 
 .services {
-  background: -webkit-gradient(linear, left top, left bottom, from(#234343), color-stop(#193030), to(#142525));
-  background: linear-gradient(to bottom, #234343, #193030, #142525);
+  background: whitesmoke;
   width: 100%;
   height: auto;
-  text-align: center;
   padding: 15px;
   padding-top: 40px;
+  text-align: center;
+}
+
+.services .border {
+  background: #828282;
+  height: 2px;
+  width: 65%;
+  margin: 0 auto;
 }
 
 .services .icon {
@@ -101,191 +107,50 @@ html, body {
   border-radius: 20px;
   width: 240px;
   height: auto;
-  border: 1px solid white;
+  border: 1px solid black;
 }
 
 .services .icon h1 {
   font-size: 16px;
-  color: white;
+  color: black;
   padding: 5px;
   margin-bottom: 10px;
+  font-weight: bold;
 }
 
 .services .icon i {
   margin: 30px;
   padding: 20px;
-  color: white;
+  color: black;
   font-size: 50px;
 }
 
-.productSection {
-  background: #f0f0f0;
-}
-
-.productSection .card {
-  height: 400px;
-  max-width: 320px;
-  background-color: rgba(255, 255, 255, 0.06);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  position: relative;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  border-radius: 8px;
-  -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
-  box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
-  font-family: 'Poppins',sans-serif;
-  margin-bottom: 50px;
-}
-
-.productSection .card h6 {
-  margin: 0;
-}
-
-.productSection .card .buy {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-  top: 130px;
-}
-
-.productSection .card .buy button {
-  margin: 10px;
-  width: 50%;
-  padding: 10px;
-  background: transparent;
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: 2px;
-  color: black;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.productSection .card .buy .btn-buy {
-  border: 2px solid #2d9cb3;
-}
-
-.productSection .card .buy .btn-buy:hover {
-  background: #2d9cb3;
-  color: white;
-}
-
-.productSection .card .buy .btn-details {
-  border: 2px solid #c8c8c8;
-}
-
-.productSection .card .buy .btn-details:hover {
-  background: #c8c8c8;
-}
-
-.productSection .card .desc {
+.product-section {
   width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
   text-align: center;
-  position: relative;
-  top: 50px;
+  background: whitesmoke;
 }
 
-.productSection .card .desc .product-name {
-  font-size: 24px;
+.product-section h1 {
+  font-size: 28px;
   font-weight: bold;
-  color: black;
-  letter-spacing: 1px;
-  text-transform: uppercase;
+  color: #0f0f0f;
+  margin-top: 20px;
+  margin-bottom: 45px;
 }
 
-.productSection .card .desc .product-description {
-  color: black;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin: 20px;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  font-size: 14px;
-}
-
-.productSection .card .primary-text {
-  color: #d5d5d5;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 0.7px;
-  margin: 5px 0;
-}
-
-.productSection .card .secondary-text {
-  color: #c0c0c0;
-  font-weight: 400;
-  font-size: 14px;
-  letter-spacing: 1px;
-  margin: 5px 0;
-}
-
-.productSection .card .price {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+.product-section a {
+  margin-bottom: 30px;
+  background: black;
+  border: 1px solid black;
+  color: white;
   padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.productSection .card .price .product-price {
-  font-size: 16px;
-  color: black;
+  font-size: 14px;
+  border-radius: 30px;
   font-weight: bold;
-}
-
-.productSection .card a {
-  color: #ffffff;
-  font-family: "Poppins",sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.5px;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  border: 3px solid #ffffff;
-  border-radius: 5px;
   text-decoration: none;
-}
-
-.productSection .card a > .fa {
-  color: #FF0000;
-}
-
-@media screen and (min-width: 451px) {
-  a {
-    font-size: 18px;
-    padding: 8px 12px 8px 12px;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  a {
-    font-size: 12px;
-    padding: 5px 8px 5px 8px;
-  }
 }
 /*# sourceMappingURL=base.css.map */
