--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -71,12 +71,19 @@ html, body {
   }
 }
 .services{
-  background: linear-gradient( to bottom, rgb(35, 67, 67), rgb(25, 48, 48), rgb(20, 37, 37));
+  // background: linear-gradient( to bottom, rgb(35, 67, 67), rgb(25, 48, 48), rgb(20, 37, 37));
+  background: rgb(245, 245, 245);
   width: 100%;
   height: auto;
-  text-align: center;
   padding: 15px;
   padding-top: 40px;
+  text-align: center;
+  .border{
+    background: rgb(130, 130, 130);
+    height: 2px;
+    width: 65%;
+    margin: 0 auto;
+  }
   .icon{
     backdrop-filter: blur(20px);
     margin: 0 auto;
@@ -84,160 +91,45 @@ html, body {
     border-radius: 20px;
     width: 240px;
     height: auto;
-    border: 1px solid white;
+    border: 1px solid black;
     h1{
       font-size: 16px;
-      color: white;
+      color: black;
       padding: 5px;
       margin-bottom: 10px;
+      font-weight: bold;
     }
     i{
       margin: 30px;
       padding: 20px;
-      color: white;
+      color: black;
       font-size: 50px;
     }
   }
 }
-
-
-.productSection{
-  background: rgb(240, 240, 240);
-  .card{
-    height: 400px;
-    max-width: 320px;
-    background-color: rgba(255, 255, 255, 0.06);
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
-    position: relative;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    border-radius: 8px;
-    -webkit-box-shadow: 20px 20px 22px rgba(0,0,0,0.2);
-    box-shadow: 20px 20px 22px rgba(0,0,0,0.2);
-    font-family: 'Poppins',sans-serif;
-    margin-bottom: 50px;
-    h6{
-      margin: 0;
-    }
-    .buy{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      top: 130px;
-      button{
-        margin: 10px;
-        width: 50%;
-        padding: 10px;
-        background: transparent;
-        text-transform: uppercase;
-        font-size: 16px;
-        letter-spacing: 2px;
-        color: black;
-        border: none;
-        outline: none;
-        border-radius: 10px;
-        transition: .3s;
-      }
-      .btn-buy{
-        border: 2px solid $primaryColor;
-        &:hover{
-          background: $primaryColor;
-          color: white;
-        }
-      }
-      .btn-details{
-        border: 2px solid rgb(200, 200, 200);
-        &:hover{
-          background: rgb(200, 200, 200);
-        }
-      }
-    }
-    .desc{
-      width: 100%;
-      text-align: center;
-      position: relative;
-      top: 50px;
-      .product-name{
-        font-size: 24px;
-        font-weight: bold;
-        color: black;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-      }
-      .product-description{
-        color: black;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        margin: 20px;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        font-size: 14px;
-      }
-    }
-    .primary-text{
-      color: #d5d5d5;
-      font-size: 16px;
-      font-weight: 600;
-      letter-spacing: 0.7px;
-      margin: 5px 0;
-    }
-    .secondary-text{
-      color: #c0c0c0;
-      font-weight: 400;
-      font-size: 14px;
-      letter-spacing: 1px;
-      margin: 5px 0;
-    }
- 
-    .price{
-      width: 100%;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      padding: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .product-price{
-        font-size: 16px;
-        color: black;
-        font-weight: bold;
-      }
-    }
-    a{
-      color: #ffffff;
-      font-family: "Poppins",sans-serif;
-      font-weight: 400;
-      letter-spacing: 0.5px;
-      position:absolute;
-      right:20px ;
-      top:20px;
-      border:3px solid #ffffff;
-      border-radius: 5px;
-      text-decoration:none;
-    }
-    a>.fa{
-      color: #FF0000;
-    }
+.product-section{
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  background: rgb(245, 245, 245);
+  h1{
+    font-size: 28px;
+    font-weight: bold;
+    color: rgb(15, 15, 15);
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+  a{
+    margin-bottom: 30px;
+    background: black;
+    border: 1px solid black;
+    color: white;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 30px;
+    font-weight: bold;
+    text-decoration: none;
   }
 }
-  @media screen and (min-width: 451px) {
-    a{
-      font-size: 18px;
-      padding:8px 12px 8px 12px;
-    }
-  }
-  
-  @media screen and (max-width: 450px) {
-    a{
-      font-size: 12px;
-      padding:5px 8px 5px 8px;
-    }
-  }
