--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -37,7 +37,7 @@
         <i class="fab fa-tiktok"></i>
     </div>
     <div class="copyright">
-        <p>Copyright &#169; 2020-2021 -NAME-</p>
+        <p>Copyright &#169; 2020-2021 Webiser</p>
     </div>
 </div>
 
