--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -30,8 +30,8 @@
             <li class="sidebar-li" id="sidebarLi">
                 <a href="#">Hjelp</a>
                 <a href="">Om oss</a>
-                <a href="">Priser</a>
-                <a href="">Kontakt oss</a>
+                <a onclick="prices()">Priser</a>
+                <a onclick="contact()">Kontakt oss</a>
             </li>   
         </ul>
     </div>
