--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -28,8 +28,8 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: -webkit-gradient(linear, left bottom, left top, from(#274343), color-stop(20%, transparent));
-  background: linear-gradient(to top, #274343, transparent 20%);
+  background: -webkit-gradient(linear, left bottom, left top, from(whitesmoke), color-stop(30%, transparent));
+  background: linear-gradient(to top, whitesmoke, transparent 30%);
 }
 
 .cover .cover-content {
@@ -93,7 +93,7 @@ html, body {
 }
 
 .services .border {
-  background: #828282;
+  background: #646464;
   height: 2px;
   width: 65%;
   margin: 0 auto;
@@ -138,19 +138,137 @@ html, body {
   font-size: 28px;
   font-weight: bold;
   color: #0f0f0f;
-  margin-top: 20px;
   margin-bottom: 45px;
 }
 
-.product-section a {
-  margin-bottom: 30px;
-  background: black;
-  border: 1px solid black;
-  color: white;
+.product-section .border {
+  background: #646464;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  height: 2px;
+  width: 65%;
+  margin: 20px auto;
+}
+
+.product-section .product-card {
+  -webkit-box-shadow: 0px 1px 5px #464646;
+          box-shadow: 0px 1px 5px #464646;
+  max-width: 330px;
+  height: auto;
+  margin: 20px auto;
+  position: relative;
+}
+
+.product-section .product-card .border {
+  background: #828282;
+  -webkit-transform: translateY(-60px);
+          transform: translateY(-60px);
+  height: 2px;
+  width: 65%;
+  margin: 0 auto;
+}
+
+.product-section .product-card .text .product-name {
   padding: 10px;
-  font-size: 14px;
-  border-radius: 30px;
+  font-size: 22px;
   font-weight: bold;
-  text-decoration: none;
+}
+
+.product-section .product-card .text .product-price {
+  -webkit-transform: translateY(-40px);
+          transform: translateY(-40px);
+  font-size: 16px;
+  color: #787878;
+}
+
+.product-section .product-card .buttons-product-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.product-section .product-card .buttons-product-section a {
+  border-radius: 10px;
+  border: 2px solid transparent;
+  font-size: 18px;
+  margin: 10px;
+  width: 50%;
+  padding: 5px;
+}
+
+.product-section .product-card .buttons-product-section a:nth-child(1) {
+  background: #191919;
+  color: white;
+}
+
+.product-section .product-card .buttons-product-section a:nth-child(2) {
+  background: white;
+  color: black;
+  border: 2px solid black;
+}
+
+.contact-us {
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: whitesmoke;
+  text-align: center;
+}
+
+.contact-us h1 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #0f0f0f;
+  margin-bottom: 15px;
+}
+
+.contact-us p {
+  font-size: 18px;
+  color: #0f0f0f;
+  margin-bottom: 15px;
+}
+
+.contact-us form label {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.contact-us form input {
+  width: 60%;
+  margin: auto;
+  border: 1px solid black;
+  border-radius: 7px;
+  padding: 3px;
+}
+
+.contact-us form input.beskjed {
+  height: 100px;
+  width: 80%;
+}
+
+.contact-us form .form-actions {
+  margin: 20px;
+}
+
+.contact-us form .form-actions button {
+  border-radius: 30px;
+  border: 2px solid black;
+  color: #1e1e1e;
+  width: 200px;
+  font-size: 18px;
+  padding: 5px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  background: black;
+  color: white;
+}
+
+.contact-us form .form-actions button:hover {
+  background: white;
+  color: black;
 }
 /*# sourceMappingURL=base.css.map */
