--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Webiser{% endblock %}</title>
     <base href="/">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="stylesheet" href="{% static '/scss/userprofile/signup.css' %}" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -26,6 +26,41 @@
 <body>
     {% include 'core/nav.html' %}
     <div id="navBarSpace"></div>
+
+    <form id="signUpForm" method="post">      
+    {% csrf_token %}
+    <strong id="signupFormRequire">Nødvendig. 150 tegn eller færre. Bare bokstaver, sifre og @.+-_</strong>
+    <br>
+    <label for="id_username">Brukernavn</label>
+    {{ form.username }}
+        <div id="signUpFormErrors">{{ form.username.errors }}</div>
+        <label for="id_first_name">Fornavn</label>
+        {{ form.first_name }}
+        <div id="signUpFormErrors">{{ form.first_name.errors }}</div>
+        <label for="id_last_name">Etternavn</label>
+        {{ form.last_name }}
+        <div id="signUpFormErrors">{{ form.last_name.errors }}</div>
+        <label for="id_email">Epost</label>
+        {{ form.email }}
+        <div id="signUpFormErrors">{{ form.email.errors }}</div>
+        <label for="id_password1">Passord</label>
+        {{ form.password1 }}
+        <ul id="signUpFormPasswordRequire">
+            <li>Passordet ditt kan ikke være for likt den andre personlige informasjonen din.</li>
+            <li>Passordet ditt må inneholde minst 8 tegn.</li>
+            <li>Passordet ditt kan ikke være et lett passord.</li>
+            <li>Passordet ditt kan ikke være helt numerisk.</li>
+            </ul>
+        <div id="signUpFormErrors">{{ form.password2.errors }}</div>
+        <label for="id_password1">Gjenta passord</label>
+        {{ form.password2 }}
+        <br>
+        <div id="submit">
+            <button id="signUpFormButton">Lag Bruker</button>
+        </div>
+</form>
+
+
     <style type="text/css">
         #navBarSpace{
             width: 100%;
