--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -174,6 +174,103 @@ html, body {
     }
   }
 }
+.about-us{
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: rgb(245, 245, 245);
+  text-align: center;
+  .border{
+    background: rgb(100, 100, 100);
+    transform: translateY(30px);
+    height: 2px;
+    width: 65%;
+    margin: 20px auto;
+  }
+  h1{
+    font-size: 28px;
+    font-weight: bold;
+    color: rgb(15, 15, 15);
+    margin-bottom: 20px;
+  }
+  img{
+    width: 80px;
+    height: 20px;
+    transform: translateY(-20px);
+  }
+  .text{
+    width: 100%;
+    p{
+      margin: 0 auto;
+      width: 90%;
+      font-size: 15px;
+      letter-spacing: 1px;
+    }
+    #secondText{
+      display: none;
+      a{
+        text-decoration: underline;
+        color: rgb(18, 18, 204);
+      }
+    }
+    button{
+      transform: translateY(30px);
+      border-radius: 30px;
+      border: 2px solid black;
+      color: rgb(30, 30, 30);
+      width: 150px;
+      font-size: 16px;
+      padding: 5px;
+      transition: all .2s ease-in-out;
+      background: black;
+      color: white;
+      &:hover{
+        background: white;
+        color: black;
+      }
+    }
+  }
+}
+#frontend{
+  background: rgb(245, 245, 245);
+  text-align: center;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  h1{
+    font-size: 28px;
+    font-weight: bold;
+    color: rgb(15, 15, 15);
+    margin-bottom: 25px;
+  }
+  .frontend{
+    width: 100%;
+    height: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    h1{
+      font-size: 22px;
+      font-weight: bold;
+      color: rgb(15, 15, 15);
+      margin-bottom: 20px;
+    }
+    img{
+      width: 250px;
+      height: 220px;
+    }
+    &.javascript{
+      .border{
+        background: rgb(100, 100, 100);
+        transform: translateY(30px);
+        height: 2px;
+        width: 65%;
+        margin: 20px auto;
+      }
+    }
+  }
+}
 .contact-us{
   width: 100%;
   height: auto;
@@ -218,7 +315,7 @@ html, body {
         border: 2px solid black;
         color: rgb(30, 30, 30);
         width: 200px;
-        font-size: 18px;
+        font-size: 16px;
         padding: 5px;
         transition: all .2s ease-in-out;
         background: black;
