--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -1,6 +1,12 @@
 #signUpForm {
   margin: 20px;
   margin-left: 10px;
+  background: whitesmoke;
+  position: fixed;
+  top: 90px;
+  z-index: 10;
+  padding: 15px;
+  display: none;
 }
 
 #signUpForm #signupFormRequire {
@@ -47,27 +53,7 @@
   color: white;
 }
 
-@media only screen and (min-device-width: 640px) {
-  #signUpForm {
-    margin-left: 80px;
-  }
-  #signUpForm #signUpFormPasswordRequire li {
-    font-size: 15px;
-  }
-  #signUpForm #submit {
-    text-align: left;
-    width: auto;
-    margin: 40px;
-    margin-left: 0;
-  }
-  #signUpForm #signUpFormButton {
-    width: 30%;
-  }
-}
-
-@media only screen and (min-device-width: 1024px) {
-  #signUpForm {
-    margin-left: 180px;
-  }
+#signUpForm.active {
+  display: block;
 }
 /*# sourceMappingURL=signup.css.map */
