--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -1,59 +1,97 @@
-#signUpForm {
-  margin: 20px;
-  margin-left: 10px;
-  background: whitesmoke;
-  position: fixed;
-  top: 90px;
-  z-index: 10;
-  padding: 15px;
+.login-signup #signUpForm {
+  width: auto;
   display: none;
 }
 
-#signUpForm #signupFormRequire {
-  font-size: 14px;
+.login-signup #signUpForm input {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 3px;
 }
 
-#signUpForm #signUpFormPasswordRequire {
-  border: 1px solid #2d9cb3;
-  padding: 5px;
-  margin-left: -10px;
-  width: 400px;
+.login-signup #signUpForm label {
+  font-weight: bold;
 }
 
-#signUpForm #signUpFormPasswordRequire li {
-  font-size: 14px;
-  list-style: none;
+.login-signup #signUpForm .form-flex-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
 }
 
-#signUpForm #submit {
+.login-signup #signUpForm .form-flex-text label {
+  width: 50%;
+}
+
+.login-signup #signUpForm .form-flex-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 10px;
+  margin-top: 0;
+}
+
+.login-signup #signUpForm .form-flex-input input {
+  width: 50%;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.login-signup #signUpForm #submit {
   text-align: center;
   width: auto;
-  margin: 40px;
 }
 
-#signUpForm #signUpFormButton {
-  color: #323232;
+.login-signup #signUpForm button {
+  margin: 15px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.login-signup #signUpForm span {
+  margin: 15px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.login-signup #signUpForm #signUpFormButton {
+  border-radius: 30px;
+  border: 2px solid black;
+  color: #1e1e1e;
+  display: inline-block;
+  text-decoration: none;
+  width: 60%;
+  font-size: 18px;
   padding: 5px;
-  border: 1px solid #2d9cb3;
-  width: 100%;
-  text-align: center;
-  background: rgba(230, 230, 230, 0.9);
-  text-transform: uppercase;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-#signUpForm #signUpFormButton:hover {
-  background: #2d9cb3;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  background: black;
   color: white;
 }
 
-#signUpForm #signUpFormButton:active {
-  background: #2d9cb3;
-  color: white;
+.login-signup #signUpForm span {
+  border-radius: 30px;
+  border: 2px solid black;
+  color: #1e1e1e;
+  display: inline-block;
+  text-decoration: none;
+  width: 60%;
+  font-size: 18px;
+  padding: 5px;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  background: white;
+  color: black;
 }
 
-#signUpForm.active {
+.login-signup #signUpForm.active {
   display: block;
 }
 /*# sourceMappingURL=signup.css.map */
