--- a/static/scss/userprofile/signup.scss
+++ b/static/scss/userprofile/signup.scss
@@ -1,50 +1,78 @@
 // STANDARD PHONE
-#signUpForm{
-    margin: 20px;
-    margin-left: 10px;
-    background: rgb(245, 245, 245);
-    position: fixed;
-    top: 90px;
-    z-index: 10;
-    padding: 15px;
-    display: none;
-    #signupFormRequire{
-        font-size: 14px;
-    }
-    #signUpFormPasswordRequire{
-        border: 1px solid #2d9cb3;
-        padding: 5px;
-        margin-left: -10px;
-        width: 400px;
-        li{
-            font-size: 14px;
-            list-style: none;
-        }
-    }
-    #submit{
-        text-align: center;
+.login-signup{
+    #signUpForm{
         width: auto;
-        margin: 40px;
-    }
-    #signUpFormButton{
-        color: rgb(50, 50, 50);
-        padding: 5px;
-        border: 1px solid #2d9cb3;
-        width: 100%;
-        text-align: center;
-        background: rgba(230, 230, 230, 0.9);
-        text-transform: uppercase;
-        transition: .3s;
-        &:hover{
-            background: #2d9cb3;
+        display: none;
+        input{
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 3px;
+        }
+        label{
+            font-weight: bold;
+        }
+        .form-flex-text{
+            display: flex;
+            text-align: center;   
+            label{
+                width: 50%;
+            }
+        }
+        .form-flex-input{
+            display: flex;
+            align-items: center;
+            justify-content: center;  
+            margin: 10px;
+            margin-top: 0;
+            input{
+                width: 50%;
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+        }
+        #submit{
+            text-align: center;
+            width: auto;
+        }
+        button{
+            margin: 15px;
+            margin-left: 0;
+            margin-right: 0;
+        }
+        span{
+            margin: 15px;
+            margin-left: 0;
+            margin-right: 0;
+        }
+        #signUpFormButton{
+            border-radius: 30px;
+            border: 2px solid black;
+            color: rgb(30, 30, 30);
+            display: inline-block;
+            text-decoration: none;
+            width: 60%;
+            font-size: 18px;
+            padding: 5px;
+            transition: all .5s ease-in-out;
+            background: black;
             color: white;
         }
-        &:active{
-            background: #2d9cb3;
-            color: white;
+        span{
+            border-radius: 30px;
+            border: 2px solid black;
+            color: rgb(30, 30, 30);
+            display: inline-block;
+            text-decoration: none;
+            width: 60%;
+            font-size: 18px;
+            padding: 5px;
+            transition: all .5s ease-in-out;
+            background: white;
+            color: black;
         }
-    }
-    &.active{
-        display: block;
+        &.active{
+            display: block;
+        }
     }
 }
+    
