--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -67,8 +67,8 @@
                 <label for="id_password1">Gjenta passord *</label>
             </div>
             <div class="form-flex-input">
-                <input type="text" id="password1" name="password1">
-                <input type="text" id="password2" name="password2">
+                <input type="password" id="password1" name="password1">
+                <input type="password" id="password2" name="password2">
             </div>
             <br>
             <div id="submit">
