--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -25,7 +25,7 @@
   background: black;
 }
 
-#navbar.sticky .my-account i {
+#navbar.sticky .my-account-icon i {
   color: black;
 }
 
@@ -54,7 +54,7 @@
   background: black;
 }
 
-#navbar.menu-active .my-account i {
+#navbar.menu-active .my-account-icon i {
   color: black;
 }
 
@@ -218,14 +218,14 @@
   right: 0;
 }
 
-#navbar .my-account {
+#navbar .my-account-icon {
   margin: 0;
   position: absolute;
   right: 60px;
   cursor: pointer;
 }
 
-#navbar .my-account i {
+#navbar .my-account-icon i {
   color: white;
   font-size: 22px;
 }
@@ -236,7 +236,7 @@
   height: auto;
   padding: 10px;
   position: fixed;
-  top: 80px;
+  top: 50px;
   left: 8%;
   opacity: 0;
   background: whitesmoke;
@@ -271,9 +271,34 @@
 }
 
 #navbar .login-signup.active {
-  top: 110px;
+  top: 80px;
   opacity: 1;
   pointer-events: visible;
+}
+
+#navbar .login-signup .my-account {
+  width: 100%;
+  display: none;
+}
+
+#navbar .login-signup .my-account a {
+  margin: 15px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+#navbar .login-signup .my-account .my-orders {
+  background: black;
+  color: white;
+}
+
+#navbar .login-signup .my-account .my-account-back {
+  background: white;
+  color: black;
+}
+
+#navbar .login-signup .my-account.active {
+  display: block;
 }
 
 #navbar .cart {
