--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -38,43 +38,13 @@ html, body {
   margin-top: 0;
 }
 
-.cover .cover-content .cover-text {
-  opacity: 0;
-  -webkit-transform: translateY(-100px);
-          transform: translateY(-100px);
-  position: relative;
-  top: -20px;
-  font-size: 28px;
-  color: whitesmoke;
-  font-weight: bold;
-  -webkit-transition: all 3s ease;
-  transition: all 3s ease;
-}
-
-.cover .cover-content .cover-btn {
-  -webkit-transition: all 3s ease;
-  transition: all 3s ease;
-  text-transform: uppercase;
-  opacity: 0;
-  text-decoration: none;
-  position: relative;
-  font-size: 16px;
-  background: #fafafa;
-  color: #323232;
-  text-align: center;
-  padding: 10px;
-  border-radius: 30px;
-  outline: none;
-  border: none;
-}
-
 .cover img {
   z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 140%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   pointer-events: none;
@@ -91,6 +61,13 @@ html, body {
   text-align: center;
 }
 
+.services h1 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #0f0f0f;
+  margin-bottom: 45px;
+}
+
 .services .border {
   background: #646464;
   height: 2px;
@@ -102,11 +79,19 @@ html, body {
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
   margin: 0 auto;
-  margin-bottom: 40px;
+  margin-bottom: 15px;
   border-radius: 20px;
   width: 240px;
   height: auto;
   border: 1px solid black;
+  padding: 5px;
+}
+
+.services .icon i {
+  margin: 30px;
+  padding: 20px;
+  color: black;
+  font-size: 60px;
 }
 
 .services .icon h1 {
@@ -117,11 +102,28 @@ html, body {
   font-weight: bold;
 }
 
-.services .icon i {
-  margin: 30px;
-  padding: 20px;
+.services .icon p {
+  display: none;
+}
+
+.services .icon button {
+  margin-top: 10px;
+  border-radius: 30px;
+  border: 2px solid black;
+  color: #1e1e1e;
+  width: 100px;
+  font-size: 12px;
+  padding: 5px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  background: black;
+  color: white;
+  outline: none;
+}
+
+.services .icon button.active {
+  background: white;
   color: black;
-  font-size: 50px;
 }
 
 .product-section {
@@ -185,6 +187,12 @@ html, body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .product-section .product-card .buttons-product-section a {
@@ -194,17 +202,8 @@ html, body {
   margin: 10px;
   width: 50%;
   padding: 5px;
-}
-
-.product-section .product-card .buttons-product-section a:nth-child(1) {
   background: #191919;
   color: white;
-}
-
-.product-section .product-card .buttons-product-section a:nth-child(2) {
-  background: white;
-  color: black;
-  border: 2px solid black;
 }
 
 .about-us {
@@ -272,6 +271,7 @@ html, body {
   transition: all .2s ease-in-out;
   background: black;
   color: white;
+  outline: none;
 }
 
 .about-us .text button:hover {
@@ -345,6 +345,12 @@ html, body {
   margin-bottom: 15px;
 }
 
+.contact-us form {
+  background: #ebebeb;
+  border-radius: 150px;
+  padding: 10px;
+}
+
 .contact-us form label {
   margin-top: 30px;
   margin-bottom: 10px;
@@ -354,7 +360,6 @@ html, body {
 
 .contact-us form input {
   width: 60%;
-  margin: auto;
   border: 1px solid black;
   border-radius: 7px;
   padding: 3px;
