--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -31,31 +31,6 @@ html, body {
     text-align: center;
     margin: 10px;
     margin-top: 0;
-    .cover-text{
-      opacity: 0;
-      transform: translateY(-100px);
-      position: relative;
-      top: -20px;
-      font-size: 28px;
-      color: rgb(245, 245, 245);
-      font-weight: bold; 
-      transition: all 3s ease;  
-    }
-    .cover-btn{
-      transition: all 3s ease;
-      text-transform: uppercase;
-      opacity: 0;
-      text-decoration: none;
-      position: relative;
-      font-size: 16px;
-      background: rgb(250, 250, 250);
-      color: rgb(50, 50, 50);
-      text-align: center;
-      padding: 10px;
-      border-radius: 30px;
-      outline: none;
-      border: none;
-    }
   }
   img{
     z-index: -1;
@@ -63,7 +38,7 @@ html, body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 140%;
+    height: 100%;
     object-fit: cover;
     pointer-events: none;
     filter: brightness(65%);
@@ -76,6 +51,12 @@ html, body {
   padding: 15px;
   padding-top: 40px;
   text-align: center;
+  h1{
+    font-size: 28px;
+    font-weight: bold;
+    color: rgb(15, 15, 15);
+    margin-bottom: 45px;
+  }
   .border{
     background: rgb(100, 100, 100);
     height: 2px;
@@ -85,11 +66,18 @@ html, body {
   .icon{
     backdrop-filter: blur(20px);
     margin: 0 auto;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
     border-radius: 20px;
     width: 240px;
     height: auto;
     border: 1px solid black;
+    padding: 5px;
+    i{
+      margin: 30px;
+      padding: 20px;
+      color: black;
+      font-size: 60px;
+    }
     h1{
       font-size: 16px;
       color: black;
@@ -97,11 +85,25 @@ html, body {
       margin-bottom: 10px;
       font-weight: bold;
     }
-    i{
-      margin: 30px;
-      padding: 20px;
-      color: black;
-      font-size: 50px;
+    p{
+      display: none;
+    }
+    button{
+      margin-top: 10px;
+      border-radius: 30px;
+      border: 2px solid black;
+      color: rgb(30, 30, 30);
+      width: 100px;
+      font-size: 12px;
+      padding: 5px;
+      transition: all .2s ease-in-out;
+      background: black;
+      color: white;
+      outline: none;
+      &.active{
+        background: white;
+        color: black;
+      }
     }
   }
 }
@@ -153,6 +155,8 @@ html, body {
     .buttons-product-section{
       display: flex;
       width: 100%;
+      justify-content: center;
+      align-items: center;
       a{
         border-radius: 10px;
         border: 2px solid transparent;
@@ -160,15 +164,8 @@ html, body {
         margin: 10px;
         width: 50%;
         padding: 5px;
-        &:nth-child(1){
-          background: rgb(25, 25, 25);
-          color: white;
-        }
-        &:nth-child(2){
-          background: white;
-          color: black;
-          border: 2px solid black;
-        }
+        background: rgb(25, 25, 25);
+        color: white;
       }
     }
   }
@@ -224,6 +221,7 @@ html, body {
       transition: all .2s ease-in-out;
       background: black;
       color: white;
+      outline: none;
       &:hover{
         background: white;
         color: black;
@@ -290,6 +288,9 @@ html, body {
 
   }
   form{
+    background: rgb(235, 235, 235);
+    border-radius: 150px;
+    padding: 10px;
     label{
       margin-top: 30px;
       margin-bottom: 10px;
@@ -298,7 +299,6 @@ html, body {
     }
     input{
       width: 60%;
-      margin: auto;
       border: 1px solid black;
       border-radius: 7px;
       padding: 3px;
